# cstuff

./: README.md  meson.build
chstuff/: chstuff.c  chstuff.h
cstuff/: chstuff.h  mathstuff.h  miscstuff.h  ncstuff.h  strstuff.h
miscstuff/: miscstuff.c  miscstuff.h
ncstuff/: ncstuff.c  ncstuff.h
strstuff/: strstuff.c  strstuff.h
